<resources>
    <string name="app_name">KASH</string>
    <string name="health_care_worker">Health Care Worker</string>
    <string name="user">User</string>
    <string name="login">login</string>
    <string name="enter_your_10_digit_mobile_number">Enter Your 10-digit Mobile Number</string>
    <string name="enter_your_mobile_number">enter your mobile number</string>
    <string name="Continue">Continue</string>
    <string name="enter_the_verification_code">Enter the verification code</string>
    <string name="wait_for_the_verification_code">Wait for the Verification Code</string>
    <string name="verify">Verify</string>
    <string name="successful">Successful</string>
    <string name="exit">Exit</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="textview">TextView</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="condition_if_any">Condition if any</string>
    <string name="sign_up">Sign Up</string>
    <string name="emergency_contact_no">Emergency Contact No.</string>
    <string name="path_highlight">Path Highlight</string>
    <string name="profile">Profile</string>
    <string name="vicinity">Vicinity</string>
    <string name="area_demographics">Area Demographics</string>
    <string name="settings">Settings</string>
    <string name="checking_if_user_exists">Checking if user exists...</string>
    <string name="complications">Complications</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="gender">Gender</string>
    <string name="blood_group">Blood Group</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="mobileno">Mobile No.</string>
    <string name="names">Name</string>
    <string name="ages">Age</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="checking_if_your_account_exists">Checking if your account exists...</string>
    <string name="title_activity_user_maps">Map</string>
    <string name="mark_healthy">Mark Healthy</string>
    <string name="mark_positive">Mark Positive</string>
    <string name="user_updated">User Updated</string>
    <string name="get_details">Get Details</string>
    <string name="enter_patients_10_digit_number">Enter Patients 10-Digit Number</string>
    <string name="enter_patients_mobile_number">Enter patients mobile number</string>
    <string name="medical_conditions">Medical conditions</string>
    <string name="covid_19_test">Covid 19 test</string>
    <string name="your_profile">Your Profile</string>
    <string name="title_activity_test__maps">Map</string>

</resources>
