<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_verification">


    <TextView
        android:id="@+id/textView"
        android:layout_width="345dp"
        android:layout_height="41dp"
        android:layout_centerHorizontal="true"
        android:text="@string/wait_for_the_verification_code"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="326dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/enter_the_verification_code"
        android:inputType="phone"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/login"
        android:layout_width="269dp"
        android:layout_height="71dp"
        android:layout_marginTop="40dp"
        android:background="#BDF3FB"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCode" />

</androidx.constraintlayout.widget.ConstraintLayout>